.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-currency-app-devops-school
  labels:
    run: currency-app-devops-school
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: currency-app-devops-school
